<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cars">

    <fragment
        android:id="@+id/navigation_cars"
        android:name="com.zoothii.rent_car_system_android.ui.cars_detail.CarsDetailFragment"
        android:label="@string/title_cars_detail"
        tools:layout="@layout/fragment_cars_detail" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zoothii.rent_car_system_android.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zoothii.rent_car_system_android.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>